--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,7 +49,8 @@ jobs:
           bun-version: 1.2.17
 
       - name: Run Go unit tests
-        run: go test ./gocode/...
+        working-directory: gocode
+        run: go test ./...
 
       - name: Run TS unit tests
         run: bun test
